{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "083b49dd-87de-408c-8ec7-7a69ac69875c",
            "actions": [
                {
                    "name": "RowLeft",
                    "type": "Value",
                    "id": "65e15b59-6a00-4d4a-9aa5-a9cd809d56bc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RowRight",
                    "type": "Value",
                    "id": "b0b0e3e9-1a97-4a48-b0e4-21ae32246d2f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02b207d5-2e46-4758-a25a-1effc6556554",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RowLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "187bced1-81d8-4654-ad30-332ab4b4ad95",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RowRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}